[DEVELOPMENT] Update E2E